--- a/options.html
+++ b/options.html
@@ -217,10 +217,8 @@
       <div class="api-info">
         <h3>機能:</h3>
         <ul style="color: #495057; font-size: 14px; line-height: 1.6; padding-left: 20px;">
-          <li>コースレート、スロープレート、Redティー総飛距離での検索</li>
+          <li>キーワード/エリアでのゴルフ場の検索</li>
           <li>楽天GORAページでの高度なフィルター機能</li>
-          <li>類似コース検索機能</li>
-          <li>女性ゴルファー向けのRedティー距離表示</li>
         </ul>
       </div>
     </div>
